force-app/main/default/objects/Reason_Code__c/fields/Category_Description__c.field-meta.xml
<CustomField>
    <fullName>Category_Description__c</fullName>
    <label>Category Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Compliance or Satisfaction</fullName>
            </value>
            <value>
                <fullName>With other Exchange or Return</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>