force-app/main/default/objects/Reason_Code__c/fields/Div__c.field-meta.xml
<CustomField>
    <fullName>Div__c</fullName>
    <label>Div</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>620</fullName>
            </value>
            <value>
                <fullName>622</fullName>
            </value>
            <value>
                <fullName>626</fullName>
            </value>
            <value>
                <fullName>646</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>