force-app/main/default/objects/Reason_Code__c/fields/Reason_Description__c.field-meta.xml
<CustomField>
    <fullName>Reason_Description__c</fullName>
    <label>Reason Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>