force-app/main/default/objects/Reason_Code__c/fields/Reason_Id__c.field-meta.xml
<CustomField>
    <fullName>Reason_Id__c</fullName>
    <label>Reason Id</label>
    <length>4</length>
    <type>Text</type>
</CustomField>