force-app/main/default/objects/Reason_Code__c/fields/Reason_Type__c.field-meta.xml
<CustomField>
    <fullName>Reason_Type__c</fullName>
    <label>Reason Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>cmr_dmr</fullName>
            </value>
            <value>
                <fullName>return_exchange</fullName>
            </value>
            <value>
                <fullName>Reschedule</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>